added annimation to the  chat

--- a/index.html
+++ b/index.html
@@ -41,40 +41,40 @@
           </div>
 
           <div class="chat-con">
-            <div class="visitor">
+            <div class="visitor one">
               <p>That sounds great. I’d be happy with that.</p>
             </div>
-            <div class="visitor">
+            <div class="visitor two">
               <p> Could you send over some pictures of your dog, please?</p>
             </div>
 
            
-              <div class="img-con">
+              <div class="img-con three">
                 <img src="/images/dog-image-1.jpg" alt="">
                 <img src="/images/dog-image-2.jpg" alt="">
                 <img src="/images/dog-image-3.jpg" alt="">
               </div>
            
-            <div class="host-con">
+            <div class="host-con ">
 
-              <div class="host">
+              <div class="host four">
                 <p> Here are a few pictures. She’s a happy girl!</p>
               </div>
             </div>
 
             <div class="host-con">
 
-              <div class="host">
+              <div class="host five">
                 <p> Can you make it?</p>
               </div>
             </div>
 
 
-            <div class="visitor">
+            <div class="visitor six">
               She looks so happy! The time we discussed works. How long shall I take her out for?
             </div>
 
-            <div class="price-con">
+            <div class="price-con seven">
               <div class="price-info">
 
                 <div class="circle"></div>
@@ -86,7 +86,7 @@
               </div>
 
             </div>
-            <div class="price-con">
+            <div class="price-con eight">
               <div class="price-info">
 
                 <div class="circle"></div>
@@ -124,4 +124,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+<script src="script.js"></script>
 </html>
